creacion de puntos en 2 y 3 dimensiones

--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -29,9 +29,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e266c3e",
+   "metadata": {},
+   "source": [
+    "### Creación de puntos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f4105042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "punto_1 = Point(20.5,50.4)\n",
+    "punto_2 = Point(30.2,15.2)\n",
+    "punto_3 = Point(20.2,36.8,75) # Punto en tres dimensiones"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4105042",
+   "id": "f53220db",
    "metadata": {},
    "outputs": [],
    "source": []
