calcular distancia entre puntos

--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "30ab3248",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "f4105042",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "e048b797",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "shapely.geometry.point.Point"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "3b98caf0",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "[(20.5, 50.4)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "949dec17",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "30.2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "71ddd064",
    "metadata": {},
    "outputs": [
@@ -212,13 +212,48 @@
        "75.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "punto_3.z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5816cca",
+   "metadata": {},
+   "source": [
+    "### Calcular distancia entre dos puntos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "30df7577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La distancia entre el punto 1 y el punto dos es: 36.512\n"
+     ]
+    }
+   ],
+   "source": [
+    "distancia = punto_1.distance(punto_2)\n",
+    "print(f\"La distancia entre el punto 1 y el punto dos es: {round(distancia, 3)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd6b7538",
+   "metadata": {},
+   "source": [
+    "distancia = pun"
    ]
   }
  ],
