creacion de lineas

--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -250,10 +250,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd6b7538",
+   "id": "a5ea2536",
    "metadata": {},
    "source": [
-    "distancia = pun"
+    "### Creación de lineas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "17b3e002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "punt_1 = Point(20,50)\n",
+    "punt_2 = Point(50,20)\n",
+    "\n",
+    "linea_dos_puntos = LineString([punt_1, punt_2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ab2b3239",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"18.8 18.8 32.400000000000006 32.400000000000006\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,70.0)\"><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.6480000000000001\" points=\"20.0,50.0 50.0,20.0\" opacity=\"0.8\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<LINESTRING (20 50, 50 20)>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linea_dos_puntos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74eb44b",
+   "metadata": {},
+   "source": [
+    "punt_1 = Point\n",
+    "\n",
+    "linea_dos_puntos = "
    ]
   }
  ],
