--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "30ab3248",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "f4105042",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "f53220db",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "<POINT (30.2 15.2)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "8aba0125",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "dc42c20f",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "d7c6022b",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "'Point'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "e048b797",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "shapely.geometry.point.Point"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "3b98caf0",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "[(20.5, 50.4)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "949dec17",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "30.2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "71ddd064",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "75.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "30df7577",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "17b3e002",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "ab2b3239",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "<LINESTRING (20 50, 50 20)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,14 +294,91 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "41df0092",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.42640687119285"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linea_dos_puntos.length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5e3e2607",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"48.4 18.4 33.199999999999996 43.2\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,80.0)\"><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.8640000000000001\" points=\"50.0,20.0 60.0,25.0 80.0,60.0\" opacity=\"0.8\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<LINESTRING (50 20, 60 25, 80 60)>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "punto_1a = Point(50,20)\n",
+    "punto_2a = Point(60,25)\n",
+    "punto_3a = Point(80,60)\n",
+    "\n",
+    "linea_multi_ponto = LineString([punto_1a, punto_2a, punto_3a])\n",
+    "linea_multi_ponto"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e74eb44b",
+   "id": "7a84fe9f",
    "metadata": {},
    "source": [
-    "punt_1 = Point\n",
-    "\n",
-    "linea_dos_puntos = "
+    "#### Longitud de una linea"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "540f83a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51.49162862899169"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linea_multi_ponto.length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e68d327f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
