--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -373,9 +373,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f51134e2",
+   "metadata": {},
+   "source": [
+    "### Poligono"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e68d327f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = Point(20,20)\n",
+    "p2 = Point(10,40)\n",
+    "p3 = Point(60,60)\n",
+    "p4 = Point(100,60)\n",
+    "\n",
+    "poligono_3_vertices = Polygon([p1, p2, p3, p4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8c934f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"6.4 16.4 97.19999999999999 47.2\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,80.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.9439999999999997\" opacity=\"0.6\" d=\"M 20.0,20.0 L 10.0,40.0 L 60.0,60.0 L 100.0,60.0 L 20.0,20.0 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<POLYGON ((20 20, 10 40, 60 60, 100 60, 20 20))>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poligono_3_vertices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "72e58b6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1400.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poligono_3_vertices.area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0c7e97a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "205.65504694633452"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poligono_3_vertices.length"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68d327f",
+   "id": "cc256fc3",
    "metadata": {},
    "outputs": [],
    "source": []
