Atributos de lineas

--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -344,6 +344,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e5401f18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(50.0, 20.0), (60.0, 25.0), (80.0, 60.0)]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(linea_multi_ponto.coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b9c169",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"65.74306090567 37.15741454089335 2.0 2.0\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,76.3148290817867)\"><circle cx=\"66.74306090567\" cy=\"38.15741454089335\" r=\"0.06\" stroke=\"#555555\" stroke-width=\"0.02\" fill=\"#66cc99\" opacity=\"0.6\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<POINT (66.743 38.157)>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linea_multi_ponto.centroid"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7a84fe9f",
    "metadata": {},
