--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -258,11 +258,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "17b3e002",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linea de dos puntos\n",
+    "\n",
     "punt_1 = Point(20,50)\n",
     "punt_2 = Point(50,20)\n",
     "\n",
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5e3e2607",
    "metadata": {},
    "outputs": [
@@ -335,6 +337,8 @@
     }
    ],
    "source": [
+    "# linea de tres puntos\n",
+    "\n",
     "punto_1a = Point(50,20)\n",
     "punto_2a = Point(60,25)\n",
     "punto_3a = Point(80,60)\n",
@@ -422,12 +426,12 @@
    "id": "f51134e2",
    "metadata": {},
    "source": [
-    "### Poligono"
+    "### Creación de Poligonos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e68d327f",
    "metadata": {},
    "outputs": [],
@@ -437,12 +441,12 @@
     "p3 = Point(60,60)\n",
     "p4 = Point(100,60)\n",
     "\n",
-    "poligono_3_vertices = Polygon([p1, p2, p3, p4])"
+    "poligono_4_vertices = Polygon([p1, p2, p3, p4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8c934f79",
    "metadata": {},
    "outputs": [
@@ -461,12 +465,12 @@
     }
    ],
    "source": [
-    "poligono_3_vertices"
+    "poligono_4_vertices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "72e58b6c",
    "metadata": {},
    "outputs": [
@@ -482,12 +486,12 @@
     }
    ],
    "source": [
-    "poligono_3_vertices.area"
+    "poligono_4_vertices.area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0c7e97a1",
    "metadata": {},
    "outputs": [
@@ -503,16 +507,8 @@
     }
    ],
    "source": [
-    "poligono_3_vertices.length"
+    "poligono_4_vertices.length"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc256fc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
