figuras geometricas con shapely

--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -1245,9 +1245,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "768616bc",
+   "metadata": {},
+   "source": [
+    "#### Crear un pentagono"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a3ce06a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"27.9372 -1.7828 4.125600000000002 3.9455999999999998\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.3799999999999999)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.08251200000000004\" opacity=\"0.6\" d=\"M 30.0,2.01 L 31.91,0.62 L 31.18,-1.63 L 28.82,-1.63 L 28.09,0.62 L 30.0,2.01 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<POLYGON ((30 2.01, 31.91 0.62, 31.18 -1.63, 28.82 -1.63, 28.09 0.62, 30 2.01))>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pentagono = Polygon([(30, 2.01), (31.91, 0.62), (31.18, -1.63), (28.82, -1.63), (28.09,0.62)])\n",
+    "pentagono"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6964f5ed",
+   "metadata": {},
+   "source": [
+    "#### Crear un triangulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b8764a96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"8.4 8.4 43.2 43.2\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,60.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.8640000000000001\" opacity=\"0.6\" d=\"M 10.0,10.0 L 50.0,10.0 L 30.0,50.0 L 10.0,10.0 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<POLYGON ((10 10, 50 10, 30 50, 10 10))>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triangulo = Polygon([(10,10),(50,10),(30,50)])\n",
+    "triangulo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4a2768b",
+   "metadata": {},
+   "source": [
+    "#### Crear un cuadrado\n",
+    "#### Crear un circulo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ce06a4",
+   "id": "49e94958",
    "metadata": {},
    "outputs": [],
    "source": []
