--- a/shapely/01_geometries.ipynb
+++ b/shapely/01_geometries.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "30ab3248",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importar point, line and polygon constructors\n",
     "\n",
-    "from shapely.geometry import Point, LineString, Polygon"
+    "from shapely.geometry import Point, LineString, Polygon, LinearRing"
    ]
   },
   {
@@ -1307,6 +1307,31 @@
    ],
    "source": [
     "triangulo = Polygon([(10,10),(50,10),(30,50)])\n",
+    "triangulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "24dfd2c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"8.4 8.4 43.2 43.2\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,60.0)\"><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.8640000000000001\" points=\"10.0,10.0 50.0,10.0 30.0,50.0 10.0,10.0\" opacity=\"0.8\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<LINEARRING (10 10, 50 10, 30 50, 10 10)>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triangulo = LinearRing([(10,10),(50,10),(30,50)])\n",
     "triangulo"
    ]
   },
